--- a/api/Gemfile
+++ b/api/Gemfile
@@ -7,9 +7,7 @@ gem 'google-api-client'
 gem 'http'
 gem 'koala', '~> 2.2'
 gem 'rack-attack'
-gem 'passgen'
-gem 'sidekiq'
-gem 'carrierwave', '>= 1.0.0.rc', '< 2.0'
+gem 'has_friendship'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.0', '>= 5.0.0.1'
